--- a/MBK/Base.lproj/Main.storyboard
+++ b/MBK/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="15C50" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="iAT-PR-4tQ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -16,11 +17,165 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" misplaced="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="aSI-dM-G40">
+                                <rect key="frame" x="20" y="20" width="560" height="536"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="h2y-ZF-pUs">
+                                        <rect key="frame" x="0.0" y="0.0" width="560" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="30" id="KjI-ph-OB5"/>
+                                        </constraints>
+                                        <state key="normal" title="GET : List of events"/>
+                                        <connections>
+                                            <action selector="btnGetListEvents:" destination="BYZ-38-t0r" eventType="touchUpInside" id="9ft-sq-Qh8"/>
+                                        </connections>
+                                    </button>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="B9f-0e-lyQ">
+                                        <rect key="frame" x="0.0" y="30" width="560" height="506"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <prototypes>
+                                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="W4n-IB-Ufv" detailTextLabel="Arp-QT-a7w" style="IBUITableViewCellStyleSubtitle" id="DLu-y0-pY3">
+                                                <rect key="frame" x="0.0" y="28" width="560" height="44"/>
+                                                <autoresizingMask key="autoresizingMask"/>
+                                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="DLu-y0-pY3" id="Z5l-Mr-W1k">
+                                                    <rect key="frame" x="0.0" y="0.0" width="560" height="43"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <subviews>
+                                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="W4n-IB-Ufv">
+                                                            <rect key="frame" x="15" y="5" width="32" height="20"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Subtitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Arp-QT-a7w">
+                                                            <rect key="frame" x="15" y="25" width="41" height="14"/>
+                                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                    </subviews>
+                                                </tableViewCellContentView>
+                                                <connections>
+                                                    <segue destination="Z6m-Ou-4Td" kind="show" identifier="showDetail" id="lmi-9b-0V8"/>
+                                                </connections>
+                                            </tableViewCell>
+                                        </prototypes>
+                                    </tableView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="B9f-0e-lyQ" firstAttribute="top" secondItem="h2y-ZF-pUs" secondAttribute="bottom" constant="50" id="53u-6Z-0Iz"/>
+                                    <constraint firstItem="h2y-ZF-pUs" firstAttribute="top" secondItem="aSI-dM-G40" secondAttribute="top" id="OkF-nL-Khi"/>
+                                    <constraint firstAttribute="trailing" secondItem="h2y-ZF-pUs" secondAttribute="trailing" id="fRj-nU-hdS"/>
+                                    <constraint firstItem="B9f-0e-lyQ" firstAttribute="width" secondItem="h2y-ZF-pUs" secondAttribute="width" id="sLc-V5-Tih"/>
+                                    <constraint firstItem="h2y-ZF-pUs" firstAttribute="leading" secondItem="aSI-dM-G40" secondAttribute="leading" id="sg3-Rv-uHQ"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="53u-6Z-0Iz"/>
+                                    </mask>
+                                </variation>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="aSI-dM-G40" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="5Kv-cB-DRT"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="aSI-dM-G40" secondAttribute="bottom" id="CEs-1I-OAE"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="aSI-dM-G40" secondAttribute="trailing" id="ZgO-3s-4zN"/>
+                            <constraint firstItem="aSI-dM-G40" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="bnR-Vf-kOL"/>
+                        </constraints>
                     </view>
+                    <navigationItem key="navigationItem" id="slY-tD-Kwx"/>
+                    <connections>
+                        <outlet property="myTableView" destination="B9f-0e-lyQ" id="gqg-PB-lWp"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1165" y="326"/>
+        </scene>
+        <!--Code Reader-->
+        <scene sceneID="GNo-n6-eDK">
+            <objects>
+                <viewController id="Z6m-Ou-4Td" customClass="QRCodeReader" customModule="MBK" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="0Ha-nP-BhA"/>
+                        <viewControllerLayoutGuide type="bottom" id="bFJ-Eb-gx3"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kLj-Ic-1zL">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="9Mk-Qc-vF8">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PNr-EN-sXr">
+                                        <rect key="frame" x="0.0" y="0.0" width="600" height="555"/>
+                                        <color key="backgroundColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="j5K-Yf-xIL">
+                                        <rect key="frame" x="0.0" y="555" width="600" height="25"/>
+                                        <color key="backgroundColor" red="1" green="0.99319709174864979" blue="0.25244454247801962" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="25" id="WES-Sa-hza"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="j5K-Yf-xIL" firstAttribute="leading" secondItem="9Mk-Qc-vF8" secondAttribute="leading" id="23Q-T4-0XJ"/>
+                                    <constraint firstAttribute="trailing" secondItem="PNr-EN-sXr" secondAttribute="trailing" id="2L3-M2-P72"/>
+                                    <constraint firstItem="j5K-Yf-xIL" firstAttribute="top" secondItem="PNr-EN-sXr" secondAttribute="bottom" constant="100" id="7GQ-yO-fQZ"/>
+                                    <constraint firstItem="PNr-EN-sXr" firstAttribute="top" secondItem="9Mk-Qc-vF8" secondAttribute="top" id="KyW-Hh-akW"/>
+                                    <constraint firstAttribute="trailing" secondItem="j5K-Yf-xIL" secondAttribute="trailing" id="TUo-br-WL3"/>
+                                    <constraint firstAttribute="bottom" secondItem="j5K-Yf-xIL" secondAttribute="bottom" id="Xcg-Cg-kAs"/>
+                                    <constraint firstItem="PNr-EN-sXr" firstAttribute="leading" secondItem="9Mk-Qc-vF8" secondAttribute="leading" id="psh-hb-5sV"/>
+                                </constraints>
+                                <variation key="default">
+                                    <mask key="constraints">
+                                        <exclude reference="7GQ-yO-fQZ"/>
+                                    </mask>
+                                </variation>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="9Mk-Qc-vF8" firstAttribute="leading" secondItem="kLj-Ic-1zL" secondAttribute="leading" id="BqN-p7-Itc"/>
+                            <constraint firstItem="9Mk-Qc-vF8" firstAttribute="trailing" secondItem="kLj-Ic-1zL" secondAttribute="trailing" id="ahr-Md-bnC"/>
+                            <constraint firstItem="9Mk-Qc-vF8" firstAttribute="top" secondItem="0Ha-nP-BhA" secondAttribute="bottom" id="bZl-oi-txr"/>
+                            <constraint firstItem="bFJ-Eb-gx3" firstAttribute="top" secondItem="9Mk-Qc-vF8" secondAttribute="bottom" id="sBq-1E-xak"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="lblShowResult" destination="j5K-Yf-xIL" id="h48-TP-nJM"/>
+                        <outlet property="myView" destination="PNr-EN-sXr" id="klR-Yd-Tve"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gTK-Cn-ZbF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1961" y="300"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="vm8-OG-jfW">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="iAT-PR-4tQ" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="DZb-MN-hwE">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="75b-Vz-xeq"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="9Yx-Tq-ZTn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="353" y="326"/>
         </scene>
     </scenes>
 </document>
